--- a/index.html
+++ b/index.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/scripts.js"></script>
+    <title>Ping-Pong Game!</title>
+  </head>
+  <body>
+    <div class="container">
+      <header>Ping-Pong</header>
+      <h1>Let's play!</h1>
+      <h2>Rules:</h2>
+        <ol>
+          <li>Enter a positive number greater than 0</li>
+          <li>Numbers divisible by 3 become "ping"</li>
+          <li>Numbers divisible by 5 become "pong"</li>
+          <li>Numbers divisible by 3 and 5 become "pingpong"</li>
+        </ol>
 
-<head>
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <script src="js/jquery-3.4.1.js"></script>
-  <script src="js/scripts.js"></script>
-  <title>Ping Pong!</title>
-</head>
-<body>
-  <div class="container">
-    <h1>Let's play ping pong with numbers!</h1>
-    <form id="number">
-      <div class="form-group">
-        <label for="number">Enter a number:</label>
-        <input id="number" type="text">
+      <form id="number">
+        <div class="form-group">
+          <label for="number">Enter a positive number:</label>
+          <input id="number" type="text">
+        </div>
+
+        <button type="submit" class="btn btn-success">Ping Pong!</button>
+      </form>
+
+      <div id="result">
+        <ul>
+        </ul>
+
       </div>
-      <button type="submit" class="btn btn-success">Ping Pong!</button>
-    </form>
-    <div id="result">
-      <ul>
-      </ul>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
