--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.4.1.js"></script>
-    <script src="js/scripts.js"></script>
-    <title>Ping-Pong Game!</title>
-  </head>
-  <body>
-    <div class="container">    
-    <div class="jumbotron">
-      <header class="intro">Ping-Pong</header>
-      <div class="main">
+
+<head>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.4.1.js"></script>
+  <script src="js/scripts.js"></script>
+  <title>Ping-Pong Game!</title>
+</head>
+
+<body>
+  <header class="intro">Ping-Pong</header>
+
+  <div class="left">
+    <p style="color:black;font-size: 22px">About Ping Pong</p>
+    <p style="color:rgb(247, 243, 192);font-size: 18px">Created by:</p>
+    <p style="color:white;font-size: 15px">Elizabeth Eymann</p>
+    <p style="color:rgb(247, 243, 192);font-size: 18px">GitHub Username/URL</p>
+    <a href="https://github.com/EEymann/pingpong">EEymann</a>
+    <p style="color:rgb(247, 243, 192);font-size: 18px">Level 2 Test for:</p>
+    <p style="color:white;font-size: 15px">JavaScript</p>
+  </div>
+
+  <div class="container">
+    <div class="main">
       <h1>Let's play!</h1>
       <h2>Rules:</h2>
-        <ol>
-          <li>Enter a positive number greater than 0</li>
-          <li>Numbers divisible by 3 become "ping"</li>
-          <li>Numbers divisible by 5 become "pong"</li>
-          <li>Numbers divisible by 3 and 5 become "pingpong"</li>
-        </ol>
+      <ol>
+        <li>Enter a positive number greater than 0</li>
+        <li>Numbers divisible by 3 become "ping"</li>
+        <li>Numbers divisible by 5 become "pong"</li>
+        <li>Numbers divisible by 3 and 5 become "pingpong"</li>
+      </ol>
 
       <form id="number">
         <div class="form-group">
@@ -27,25 +39,13 @@
           <input id="number" type="text">
           <button type="submit" class="btn">Ping Pong!</button>
         </div>
-      </div>
-      <div id="result">
-          <ul>
-          </ul>
-  
-        </div>
-        <div class="left">
-          <h1>About Ping Pong</h1>
-          <h2>Created by:</h2>
-          <p>Elizabeth Eymann</p>
-          <h2>GitHub Username/URL</h2>
-          <p>EEymann</p>
-          <h2>Level 2 Test for:</h2>
-          <p>JavaScript</p>
-          </div>
       </form>
+      <div id="result">
+        <ul>
+        </ul>
+      </div>
+    </div>
+  </div>
+</body>
 
-      
-    </div>
-    </div>
-  </body>
 </html>
