add README file and add a cat giphy to index

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
           <button type="submit" class="btn">Ping Pong!</button>
         </div>
       </form>
+      <iframe src="https://giphy.com/embed/fvA1ieS8rEV8Y" width="280" height="160" frameBorder="0" class="giphy-embed"
+        allowFullScreen></iframe>
+      <p><a href="https://giphy.com/gifs/cat-animal-ping-pong-fvA1ieS8rEV8Y">via GIPHY</a></p>
       <div id="result">
         <ul>
         </ul>
